# MiniTensorFlow

./: CMakeLists.txt  README.md
include/mt/: engine.hpp  layer.hpp  node.hpp  ops.hpp  optimizer.hpp  tensor.hpp
src/: Engine.cpp  Layer.cpp  Node.cpp  Ops.cpp  Optimizer.cpp  Tensor.cpp  main.cpp
